<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:background="@drawable/fondo_about"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".Activities.AcercaActivity"
  tools:showIn="@layout/activity_acerca">

  <ScrollView
    android:id="@+id/scrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/textView2"
        style="@style/Texto_Titulo"
        android:text="@string/acerca_de_lectuticas"/>

      <TextView
        android:id="@+id/textView3"
        style="@style/Texto_Cuerpo"
        android:text="@string/tec_nombre_completo"
        />

      <TextView
        android:id="@+id/textView16"
        style="@style/Texto_Cuerpo"
        android:text="@string/escuela_ingenieria_computacion"/>

      <TextView
        android:id="@+id/textView5"
        style="@style/Texto_Cuerpo"
        android:text="@string/nombre_curso_disp_moviles"/>

      <TextView
        android:id="@+id/textView15"
        style="@style/Texto_Cuerpo_Negrita"
        android:text="@string/descripcion_listing"
        android:textColor="@android:color/white"/>

      <TextView
        android:id="@+id/textView18"
        style="@style/Texto_Cuerpo"
        android:text="@string/descripcion_app"
        android:textColor="@android:color/white"/>

      <TextView
        android:id="@+id/textView8"
        style="@style/Texto_Cuerpo_Negrita"
        android:text="@string/desarrolladores_listing"/>

      <TextView
        android:id="@+id/textView9"
        style="@style/Texto_Cuerpo_Listado"
        android:text="@string/esteban_fonseca_montoya"/>

      <TextView
        android:id="@+id/textView10"
        style="@style/Texto_Cuerpo_Listado"
        android:text="@string/arlyn_lopez_navarro"/>

      <TextView
        android:id="@+id/textView11"
        style="@style/Texto_Cuerpo_Listado"
        android:text="@string/daniel_pacheco_lascarez"/>

      <TextView
        android:id="@+id/textView12"
        style="@style/Texto_Cuerpo_Negrita"
        android:text="@string/agradecimientos_listing"/>

      <TextView
        android:id="@+id/textView14"
        style="@style/Texto_Cuerpo_Listado"
        android:text="@string/parque_la_libertad"/>

      <TextView
        android:id="@+id/textView7"
        style="@style/Texto_Cuerpo_Listado"
        android:text="@string/prof_adriana_alvarez_figueroa"/>

      <TextView
        android:id="@+id/textView19"
        style="@style/Texto_Cuerpo_Listado"
        android:text="@string/victor_aguirre"/>

    </LinearLayout>
  </ScrollView>

</RelativeLayout>


